<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/local_team_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_local"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:nextFocusDown="@id/til_pass"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_score"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/score_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number|text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_away"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/away_team_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_away"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:nextFocusDown="@id/til_pass"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_result"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_no"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_yes"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</layout>